--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcc 'E151'
 - !lcsh 'Children -- United States'
 - !lcsh 'United States -- Social life and customs -- To 1775'
+- GITenberg
 title: Child Life in Colonial Days
 url: http://www.gutenberg.org/ebooks/43863
